2005-05-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorbutton.c: started to add object properties.

2005-05-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): Fix ytpo
	in wget command line so it actually works.

2005-05-20  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdashpattern.c: don't include "libgimpbase/gimpbase.h"

2005-05-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorbutton.c (gimp_color_button_clicked):
	made the color selection dialog transient to the window that
	contains the color button.

2005-05-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcoloreditor.c: moved the color picker button out
	of the row of notebook switching buttons next to the hex entry.

2005-05-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorselection.c: put the hex entry above the
	color history again.

	* libgimpwidgets/gimpcolorscales.c: do not allocate row spacing
	for the alpha row if it isn't visible.

2005-05-19  Manish Singh  <yosh@gimp.org>

	* plug-ins/jpeg/jpeg-save.c (save_image): don't do pointer arithmetic
	with void *. Fixes bug #304701.

2005-05-19  Manish Singh  <yosh@gimp.org>

	* app/config/test-config.c: Add casts to G_OBJECT() for
	gimp_config_diff().

2005-05-19  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorscales.c: removed the hex entry from the
	GimpColorScales widget.

	* libgimpwidgets/gimpcolorselection.c: added it here instead.

	* app/widgets/gimpcoloreditor.[ch]: and here, next to the FG/BG
	editor.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpstrokeoptions.[ch]: renamed property "miter" to
	"miter-limit" and added a description to be used as a tooltip in
	the stroke editor.

	* app/core/gimpdrawable-stroke.c
	* app/widgets/gimpstrokeeditor.c: changed accordingly.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpstrokeoptions.[ch]
	* app/widgets/gimpdasheditor.c