@@ -1,5 +1,16 @@
 2005-05-20  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgetsenums.h
+	* libgimpwidgets/gimpwidgetstypes.h: moved enums to a new file and
+	register the GimpColorAreaType enum with the type system.
+
+	* libgimpwidgets/gimpwidgets.def: updated.
+
+	* libgimpwidgets/gimpcolorarea.c: added an object property.
+
+2005-05-20  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpcolorbutton.c: started to add object properties.
 
 2005-05-20  Manish Singh  <yosh@gimp.org>
